# practica-tercero

./: README.md  cristian.py  juan.py  main.py  pablo.py  pyproject.toml
