[tool.poetry]
name = "super-web-api"
version = "0.1.0"
description = "Demo app para aplicar conceptos de Git"
authors = ["Cristián Pérez <cristian@wenoa.com.ar>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
